lib/stratiform/res/test/stratiform/corpus/pos/tabulation-three-columns.tel
# ID  # Name  # Age
Alice 30      hello
Bob   25      world
