lib/stratiform/res/test/stratiform/corpus/neg/e118-consecutive-spaces-in-value.tel
# Name       # Age
Alice        hello  world
